# platform.prebuilts.clang.host.linux-x86

./: .gitignore  Android.bp  BUILD.bazel  OWNERS  README.md  cc_toolchain_clang_version_test.bzl  cc_toolchain_config.bzl  cc_toolchain_constants.bzl  cc_toolchain_features.bzl  cc_toolchain_features_cfi_test.bzl  cc_toolchain_features_env_based_flags_test.bzl  cc_toolchain_features_flag_order_test.bzl  cc_toolchain_features_pack_relocation_test.bzl  cc_toolchain_features_thinlto_test.bzl  cc_toolchain_features_ubsan_test.bzl  clang_version.bzl
clang-r487747c/: BUILD.bazel
clang-r487747c/lib/: libncurses.so.6
clang-r536225/: AndroidVersion.txt  BUILD.bazel  BUILD_INFO  clang_source_info.md  manifest_12251623.xml  manifest_12414805.xml  manifest_12519410.xml  manifest_12602325.xml  manifest_12701618.xml  manifest_12755234.xml  manifest_12833971.xml  manifest_14043575.xml
clang-r536225/include/c++/v1/: cxxabi.h  libcxx.imp  regex
clang-r536225/include/clang/AST/: AbstractBasicReader.inc  AbstractBasicWriter.inc  AbstractTypeReader.inc  AbstractTypeWriter.inc  AttrImpl.inc  AttrNodeTraverse.inc  AttrTextNodeDump.inc  AttrVisitor.inc  Attrs.inc  DeclNodes.inc  StmtNodes.inc
clang-r536225/include/clang/Basic/: AttrHasAttributeImpl.inc  AttrList.inc  Builtins.inc  BuiltinsRISCV.inc  DiagnosticASTKinds.inc  DiagnosticCommentKinds.inc  DiagnosticCommonKinds.inc  DiagnosticCrossTUKinds.inc  DiagnosticDriverKinds.inc  DiagnosticFrontendKinds.inc  DiagnosticGroups.inc  DiagnosticIndexName.inc  DiagnosticInstallAPIKinds.inc  DiagnosticLexKinds.inc  DiagnosticParseKinds.inc  DiagnosticRefactoringKinds.inc  DiagnosticSemaKinds.inc  DiagnosticSerializationKinds.inc  Version.inc  arm_cde_builtin_sema.inc  arm_mve_builtin_cg.inc  arm_mve_builtin_sema.inc  arm_neon.inc  arm_sme_streaming_attrs.inc  arm_sve_builtin_cg.inc  arm_sve_builtins.inc  arm_sve_typeflags.inc  riscv_sifive_vector_builtin_cg.inc  riscv_vector_builtin_sema.inc
clang-r536225/include/clang/Config/: config.h
clang-r536225/include/clang/Driver/: Options.inc
clang-r536225/include/clang/Parse/: AttrParserStringSwitches.inc
clang-r536225/include/clang/Sema/: AttrParsedAttrImpl.inc  AttrParsedAttrKinds.inc  AttrParsedAttrList.inc  AttrSpellingListIndex.inc  AttrTemplateInstantiate.inc
clang-r536225/include/clang/Serialization/: AttrPCHRead.inc  AttrPCHWrite.inc
clang-r536225/include/lldb/API/: SBLanguages.h
clang-r536225/include/lldb/Host/: Config.h
clang-r536225/include/llvm/IR/: Attributes.inc  Function.h  IntrinsicEnums.inc  IntrinsicImpl.inc  IntrinsicsAArch64.h  IntrinsicsAMDGPU.h  IntrinsicsARM.h  IntrinsicsBPF.h  IntrinsicsDirectX.h  IntrinsicsHexagon.h  IntrinsicsLoongArch.h  IntrinsicsMips.h  IntrinsicsNVPTX.h  IntrinsicsPowerPC.h  IntrinsicsR600.h  IntrinsicsRISCV.h  IntrinsicsS390.h  IntrinsicsSPIRV.h  IntrinsicsVE.h  IntrinsicsWebAssembly.h  IntrinsicsX86.h  IntrinsicsXCore.h
clang-r536225/include/llvm/Support/: VCSRevision.h
clang-r536225/include/llvm/TargetParser/: AArch64TargetParserDef.inc  ARMTargetParserDef.inc  RISCVTargetParserDef.inc  Triple.h
clang-r536225/lib/: libc++.modules.json  libedit.so.0  libform.so.6  libncurses.so.6  libpanel.so.6  libxml2.so.2
clang-r536225/lib/cmake/clang/: ClangConfig.cmake  ClangTargets.cmake
clang-r536225/lib/cmake/lld/: LLDConfig.cmake
clang-r536225/lib/cmake/llvm/: LLVMConfig.cmake  LLVMExports-release.cmake  LLVMExports.cmake  LLVMExternalProjectUtils.cmake
clang-r536225/lib/cmake/polly/: PollyConfig.cmake  PollyConfigVersion.cmake
clang-r536225/python3/lib/pkgconfig/: python-3.11-embed.pc
clang-r536225/python3/lib/python3.11/: _sysconfigdata__linux_x86_64-linux-gnu.py
clang-r536225/runtimes_ndk_cxx/: libclang_rt.asan-arm-android.a.syms  libclang_rt.asan-x86_64-android.a.syms
clang-r563880/: AndroidVersion.txt  BUILD.bazel  BUILD_INFO  clang_source_info.md  manifest_13352139.xml  manifest_13508054.xml  manifest_13563557.xml  manifest_13688100.xml  manifest_13783749.xml
clang-r563880/include/clang/AST/: StmtNodes.inc
clang-r563880/include/clang/Basic/: BuiltinsNVPTX.inc  DiagnosticDriverKinds.inc  DiagnosticFrontendKinds.inc  DiagnosticLexKinds.inc  DiagnosticParseKinds.inc  DiagnosticSemaKinds.inc
clang-r563880/include/clang/Config/: config.h
clang-r563880/include/clang/Driver/: Options.inc
clang-r563880/include/llvm/Config/: TargetExegesis.def
clang-r563880/include/llvm/IR/: Attributes.inc  IntrinsicsARM.h  IntrinsicsDirectX.h  IntrinsicsHexagon.h  IntrinsicsMips.h  IntrinsicsNVPTX.h  IntrinsicsPowerPC.h  IntrinsicsSPIRV.h  IntrinsicsWebAssembly.h  IntrinsicsX86.h
clang-r563880/include/llvm/TargetParser/: AArch64TargetParserDef.inc
clang-r563880/lib/: libedit.so.0  libform.so.6  libncurses.so.6  libpanel.so.6  libxml2.so.2
clang-r563880/lib/cmake/clang/: ClangTargets-release.cmake  ClangTargets.cmake
clang-r563880/lib/cmake/lld/: LLDConfigVersion.cmake
clang-r563880/lib/cmake/llvm/: LLVMExports.cmake
clang-r563880/python3/: OWNERS
clang-r563880/python3/lib/python3.11/: LICENSE.txt
clang-r563880/runtimes_ndk_cxx/: libclang_rt.tsan-aarch64-android.a.syms
clang-r584948/: AndroidVersion.txt  BUILD.bazel  BUILD_INFO  clang_source_info.md  manifest_14488419.xml
clang-r584948/include/c++/v1/: string
clang-r584948/include/clang/AST/: AbstractTypeReader.inc  AbstractTypeWriter.inc  Attrs.inc
clang-r584948/include/clang/Basic/: AttrHasAttributeImpl.inc  AttrParsedAttrList.inc  AttributeSpellingList.inc  Builtins.inc  BuiltinsSPIRVCommon.inc  BuiltinsSPIRVVK.inc  (+15 more)
clang-r584948/lib/: libedit.so.0  libform.so.6  libncurses.so.6  libpanel.so.6  libxml2.so.16
kleaf/: BUILD.bazel  OWNERS  README.md  action_names.bzl  android.bzl  architecture_constants.bzl  clang_config.bzl  clang_toolchain.bzl  clang_toolchain_repository.bzl  common.bzl  linux.bzl  python_toolchain_repository.bzl  register.bzl  template_BUILD.bazel  versions.bzl
kleaf/parent/: clang-3289846  clang-r450784d  clang-r450784d1  clang-r450784e  clang-r458507  clang-r468909  clang-r468909b  clang-r475365b  clang-r487747  clang-r487747b  clang-stable
(+1889 files in other folders)
