# NOTE: THIS FILE IS EXPERIMENTAL FOR THE BAZEL MIGRATION AND NOT USED FOR
# YOUR BUILDS CURRENTLY.
#
# It is not yet the source of truth for your build. If you're looking to modify
# the build file, modify the Android.bp file instead. Do *not* modify this file
# unless you have coordinated with the team managing the Soong to Bazel
# migration.

# Toolchain config
filegroup(name = "empty")

load("@bazel_skylib//rules:common_settings.bzl", "bool_flag")
load("@env//:env.bzl", "env")
load(
    ":cc_toolchain_config.bzl",
    "android_cc_toolchain",
    "clang_version",
    "expand_feature_flags",
    "toolchain_definition",
)
load(
    ":cc_toolchain_constants.bzl",
    "arch_to_variants",
    "arches",
    "arm_extra_ldflags",
    "device_compatibility_flags_non_darwin",
    "device_compatibility_flags_non_windows",
    "enabled_features",
    "generated_constants",
    "variant_constraints",
    "variant_name",
    "x86_64_host_toolchains",
    "x86_64_musl_host_toolchains",
    "x86_host_toolchains",
    "x86_musl_host_toolchains",
    _bionic_crt = "bionic_crt",
    _musl_crt = "musl_crt",
)
load(
    ":cc_toolchain_features_thinlto_test.bzl",
    "cc_toolchain_features_lto_test_suite",
)
load(
    ":cc_toolchain_features_ubsan_test.bzl",
    "cc_toolchain_features_ubsan_test_suite",
)
load(
    ":cc_toolchain_features_env_based_flags_test.bzl",
    "cc_toolchain_features_env_based_flags_test_suite",
)
load("//build/bazel/flags:common.bzl", "is_env_true")
load("//build/bazel/platforms/arch/variants:constants.bzl", _arch_constants = "constants")

# Different clang versions are configured here.
clang_version(
    name = "clang",
    directory = generated_constants.CLANG_DEFAULT_VERSION,
    includes = [
        "lib64/clang/%s/include" % generated_constants.CLANG_DEFAULT_SHORT_VERSION,
    ],
)

_LIBCLANG_RT_PREFIX = "%s/lib64/clang/%s/lib/linux" % (
    generated_constants.CLANG_DEFAULT_VERSION,
    generated_constants.CLANG_DEFAULT_SHORT_VERSION,
)

_LIBCLANG_RT_PREBUILT_MAP = {
    "//build/bazel/platforms/os_arch:android_arm": _LIBCLANG_RT_PREFIX + "/libclang_rt.builtins-arm-android.a",
    "//build/bazel/platforms/os_arch:android_arm64": _LIBCLANG_RT_PREFIX + "/libclang_rt.builtins-aarch64-android.a",
    "//build/bazel/platforms/os_arch:android_x86": _LIBCLANG_RT_PREFIX + "/libclang_rt.builtins-i686-android.a",
    "//build/bazel/platforms/os_arch:android_x86_64": _LIBCLANG_RT_PREFIX + "/libclang_rt.builtins-x86_64-android.a",
    "//build/bazel/platforms/os_arch:linux_bionic_x86_64": _LIBCLANG_RT_PREFIX + "/libclang_rt.builtins-x86_64-android.a",
    "//build/bazel/platforms/os_arch:linux_glibc_x86": _LIBCLANG_RT_PREFIX + "/libclang_rt.builtins-i386.a",
    "//build/bazel/platforms/os_arch:linux_glibc_x86_64": _LIBCLANG_RT_PREFIX + "/libclang_rt.builtins-x86_64.a",
    "//build/bazel/platforms/os_arch:linux_musl_x86": _LIBCLANG_RT_PREFIX + "/i686-unknown-linux-musl/lib/linux/libclang_rt.builtins-i386.a",
    "//build/bazel/platforms/os_arch:linux_musl_x86_64": _LIBCLANG_RT_PREFIX + "/x86_64-unknown-linux-musl/lib/linux/libclang_rt.builtins-x86_64.a",
    "//conditions:default": None,
}

# x86_64 toolchain definitions
[
    android_cc_toolchain(
        name = "cc_toolchain_x86_64" + variant_name(variant),
        clang_version = ":clang",
        clang_version_directory = generated_constants.CLANG_DEFAULT_VERSION,
        crt = _bionic_crt,
        libclang_rt_builtin = _LIBCLANG_RT_PREBUILT_MAP["//build/bazel/platforms/os_arch:android_x86_64"],
        linker_flags = generated_constants.X86_64ToolchainLdflags + generated_constants.X86_64Lldflags,
        target_arch = arches.X86_64,
        target_flags = generated_constants.X86_64ToolchainCflags +
                       generated_constants.X86_64ArchVariantCflags[variant.arch_variant] +
                       expand_feature_flags(
                           variant.arch_variant,
                           _arch_constants.AndroidArchToVariantToFeatures[arches.X86_64],
                           generated_constants.X86_64ArchFeatureCflags,
                       ) + generated_constants.X86_64Cflags,
        target_os = "android",
        toolchain_identifier = "x86_64-toolchain",
    )
    for variant in arch_to_variants[arches.X86_64]
]

# x86 toolchain definitions.
[
    android_cc_toolchain(
        name = "cc_toolchain_x86" + variant_name(variant),
        clang_version = ":clang",
        clang_version_directory = generated_constants.CLANG_DEFAULT_VERSION,
        crt = _bionic_crt,
        libclang_rt_builtin = _LIBCLANG_RT_PREBUILT_MAP["//build/bazel/platforms/os_arch:android_x86"],
        linker_flags = generated_constants.X86ToolchainLdflags + generated_constants.X86Lldflags,
        target_arch = arches.X86,
        target_flags = generated_constants.X86ToolchainCflags +
                       generated_constants.X86ArchVariantCflags[variant.arch_variant] +
                       expand_feature_flags(
                           variant.arch_variant,
                           _arch_constants.AndroidArchToVariantToFeatures[arches.X86],
                           generated_constants.X86ArchFeatureCflags,
                       ) + generated_constants.X86Cflags,
        target_os = "android",
        toolchain_identifier = "x86-toolchain",
    )
    for variant in arch_to_variants[arches.X86]
]

# arm64 toolchain definitions.
[
    android_cc_toolchain(
        name = "cc_toolchain_arm64" + variant_name(variant),
        clang_version = ":clang",
        clang_version_directory = generated_constants.CLANG_DEFAULT_VERSION,
        crt = _bionic_crt,
        libclang_rt_builtin = _LIBCLANG_RT_PREBUILT_MAP["//build/bazel/platforms/os_arch:android_arm64"],
        linker_flags = generated_constants.Arm64CpuVariantLdflags.get(
            variant.cpu_variant,
            [],
        ) + generated_constants.Arm64Lldflags,
        target_arch = arches.Arm64,
        target_flags = generated_constants.Arm64Cflags +
                       generated_constants.Arm64ArchVariantCflags[variant.arch_variant] +
                       generated_constants.Arm64CpuVariantCflags.get(
                           variant.cpu_variant,
                           [],
                       ),
        target_os = "android",
        toolchain_identifier = "arm64-toolchain",
    )
    for variant in arch_to_variants[arches.Arm64]
]

# arm32 toolchain definitions.
[
    android_cc_toolchain(
        name = "cc_toolchain_arm" + variant_name(variant),
        clang_version = ":clang",
        clang_version_directory = generated_constants.CLANG_DEFAULT_VERSION,
        crt = _bionic_crt,
        libclang_rt_builtin = _LIBCLANG_RT_PREBUILT_MAP["//build/bazel/platforms/os_arch:android_arm"],
        linker_flags = generated_constants.ArmLldflags + arm_extra_ldflags(variant),
        target_arch = arches.Arm,
        target_flags = generated_constants.ArmCflags +
                       generated_constants.ArmToolchainCflags +
                       generated_constants.ArmArchVariantCflags[variant.arch_variant] +
                       generated_constants.ArmCpuVariantCflags.get(
                           variant.cpu_variant,
                           [],
                       ),
        target_os = "android",
        toolchain_identifier = "arm-toolchain",
    )
    for variant in arch_to_variants[arches.Arm]
]

# Toolchain to compile for the linux host.
# TODO(b/186628704): automatically generate from Soong.
android_cc_toolchain(
    name = "cc_toolchain_x86_64_linux_host",
    clang_version = ":clang",
    clang_version_directory = generated_constants.CLANG_DEFAULT_VERSION,
    compiler_flags = generated_constants.LinuxCflags +
                     generated_constants.LinuxGlibcCflags +
                     generated_constants.LinuxX8664Cflags +
    # Added by stl.go for non-bionic toolchains.
    [
        "-nostdinc++",
    ],
    crt = False,
    gcc_toolchain = generated_constants.LinuxGccRoot,
    libclang_rt_builtin = _LIBCLANG_RT_PREBUILT_MAP["//build/bazel/platforms/os_arch:linux_glibc_x86_64"],
    linker_flags = generated_constants.LinuxGlibcLdflags +
                   generated_constants.LinuxLdflags +
                   generated_constants.LinuxX8664Ldflags +
                   device_compatibility_flags_non_windows +
                   device_compatibility_flags_non_darwin,
    rtti_toggle = False,
    target_arch = "x86_64",
    target_flags = ["--target=x86_64-linux-gnu"],
    target_os = "linux_glibc",
    toolchain_identifier = "x86_64-toolchain",
)

# Toolchain to compile for the linux x86 target.
android_cc_toolchain(
    name = "cc_toolchain_x86_linux_host",
    clang_version = ":clang",
    clang_version_directory = generated_constants.CLANG_DEFAULT_VERSION,
    compiler_flags = generated_constants.LinuxCflags +
                     generated_constants.LinuxGlibcCflags +
                     generated_constants.LinuxX86Cflags +
    # Added by stl.go for non-bionic toolchains.
    [
        "-nostdinc++",
    ],
    crt = False,
    gcc_toolchain = generated_constants.LinuxGccRoot,
    libclang_rt_builtin = _LIBCLANG_RT_PREBUILT_MAP["//build/bazel/platforms/os_arch:linux_glibc_x86"],
    linker_flags = generated_constants.LinuxGlibcLdflags +
                   generated_constants.LinuxLdflags +
                   generated_constants.LinuxX86Ldflags +
                   device_compatibility_flags_non_windows +
                   device_compatibility_flags_non_darwin,
    rtti_toggle = False,
    target_arch = "x86",
    target_flags = ["--target=i686-linux-gnu"],
    target_os = "linux_glibc",
    toolchain_identifier = "x86-toolchain",
)

# Toolchain to compile for the linux host with musl libc.
android_cc_toolchain(
    name = "cc_toolchain_x86_64_linux_musl_host",
    clang_version = ":clang",
    clang_version_directory = generated_constants.CLANG_DEFAULT_VERSION,
    compiler_flags = generated_constants.LinuxCflags +
                     generated_constants.LinuxMuslCflags +
                     generated_constants.LinuxX8664Cflags +
    # Added by stl.go for non-bionic toolchains.
    [
        "-nostdinc++",
    ],
    crt = _musl_crt,
    gcc_toolchain = generated_constants.LinuxGccRoot,
    libclang_rt_builtin = _LIBCLANG_RT_PREBUILT_MAP["//build/bazel/platforms/os_arch:linux_musl_x86_64"],
    linker_flags = generated_constants.LinuxMuslLdflags +
                   generated_constants.LinuxLdflags +
                   generated_constants.LinuxX8664Ldflags,
    rtti_toggle = False,
    target_arch = "x86_64",
    target_flags = ["--target=x86_64-linux-musl"],
    target_os = "linux_musl",
    toolchain_identifier = "x86_64-toolchain",
)

# Toolchain to compile for the linux x86 host with musl libc.
android_cc_toolchain(
    name = "cc_toolchain_x86_linux_musl_host",
    clang_version = ":clang",
    clang_version_directory = generated_constants.CLANG_DEFAULT_VERSION,
    compiler_flags = generated_constants.LinuxCflags +
                     generated_constants.LinuxMuslCflags +
                     generated_constants.LinuxX86Cflags +
    # Added by stl.go for non-bionic toolchains.
    [
        "-nostdinc++",
    ],
    crt = _musl_crt,
    gcc_toolchain = generated_constants.LinuxGccRoot,
    libclang_rt_builtin = _LIBCLANG_RT_PREBUILT_MAP["//build/bazel/platforms/os_arch:linux_musl_x86"],
    linker_flags = generated_constants.LinuxMuslLdflags +
                   generated_constants.LinuxLdflags +
                   generated_constants.LinuxX86Ldflags,
    rtti_toggle = False,
    target_arch = "x86",
    target_flags = ["--target=i686-linux-musl"],
    target_os = "linux_musl",
    toolchain_identifier = "x86-toolchain",
)

toolchain_type(name = "nocrt_toolchain")

# Device toolchains
[
    [
        [
            toolchain_definition(arch, variant, nocrt)
            for nocrt in [
                True,
                False,
            ]
        ]
        for variant in variants
    ]
    for arch, variants in arch_to_variants.items()
]

# Toolchains for linux host (x86_64) archs
[
    toolchain(
        name = "%s_def" % toolchain_name,
        exec_compatible_with = [
            "//build/bazel/platforms/arch:x86_64",
            "//build/bazel/platforms/os:linux_glibc",
        ],
        target_compatible_with = [
            "//build/bazel/platforms/arch:x86_64",
            "//build/bazel/platforms/os:linux_glibc",
        ],
        toolchain = toolchain_name,
        toolchain_type = toolchain_type,
    )
    for (toolchain_name, toolchain_type) in x86_64_host_toolchains
]

# Toolchains for linux target (non-host) x86 arch
[
    toolchain(
        name = "%s_def" % toolchain_name,
        exec_compatible_with = [
            "//build/bazel/platforms/arch:x86_64",
            "//build/bazel/platforms/os:linux_glibc",
        ],
        target_compatible_with = [
            "//build/bazel/platforms/arch:x86",
            "//build/bazel/platforms/os:linux_glibc",
        ],
        toolchain = toolchain_name,
        toolchain_type = toolchain_type,
    )
    for (toolchain_name, toolchain_type) in x86_host_toolchains
]

# Toolchains for linux musl host (x86_64) archs
[
    toolchain(
        name = "%s_def" % toolchain_name,
        exec_compatible_with = [
            "//build/bazel/platforms/arch:x86_64",
            "//build/bazel/platforms/os:linux_musl",
        ],
        target_compatible_with = [
            "//build/bazel/platforms/arch:x86_64",
            "//build/bazel/platforms/os:linux_musl",
        ],
        toolchain = toolchain_name,
        toolchain_type = toolchain_type,
    )
    for (toolchain_name, toolchain_type) in x86_64_musl_host_toolchains
]

# Toolchains for linux musl target (non-host) x86 arch
[
    toolchain(
        name = "%s_def" % toolchain_name,
        exec_compatible_with = [
            "//build/bazel/platforms/arch:x86_64",
            "//build/bazel/platforms/os:linux_musl",
        ],
        target_compatible_with = [
            "//build/bazel/platforms/arch:x86",
            "//build/bazel/platforms/os:linux_musl",
        ],
        toolchain = toolchain_name,
        toolchain_type = toolchain_type,
    )
    for (toolchain_name, toolchain_type) in x86_musl_host_toolchains
]

cc_import(
    name = "libclang_rt",
    static_library = select(_LIBCLANG_RT_PREBUILT_MAP),
)

[alias(
    name = "llvm-%s" % tool,
    actual = generated_constants.CLANG_DEFAULT_VERSION + "/bin/llvm-%s" % tool,
    visibility = ["//visibility:public"],
) for tool in [
    "ar",
    "readelf",
    "objcopy",
    "strip",
]]

[alias(
    name = tool,
    actual = generated_constants.CLANG_DEFAULT_VERSION + "/bin/" + tool,
    visibility = ["//visibility:public"],
) for tool in [
    "clang-tidy",
    "clang-tidy.sh",
    "clang-tidy.real",
]]

# Test tools used by Bazel tests.
filegroup(
    name = "test_tools",
    srcs = [
        generated_constants.CLANG_DEFAULT_VERSION + "/bin/llvm-readelf",
        generated_constants.CLANG_DEFAULT_VERSION + "/bin/llvm-nm",
    ],
    visibility = ["//build/bazel/tests:__subpackages__"],
)

cc_toolchain_features_lto_test_suite(
    name = "cc_toolchain_features_thinlto_tests",
)

cc_toolchain_features_ubsan_test_suite(
    name = "cc_toolchain_features_ubsan_tests",
)

cc_toolchain_features_env_based_flags_test_suite(
    name = "cc_toolchain_features_env_based_flags_tests",
)

bool_flag(
    name = "auto_zero_initialize_env",
    build_setting_default = is_env_true(env.get("AUTO_ZERO_INITIALIZE")),
)

bool_flag(
    name = "auto_pattern_initialize_env",
    build_setting_default = is_env_true(env.get("AUTO_PATTERN_INITIALIZE")),
)

bool_flag(
    name = "auto_uninitialize_env",
    build_setting_default = is_env_true(env.get("AUTO_UNINITIALIZE")),
)

bool_flag(
    name = "use_ccache_env",
    build_setting_default = is_env_true(env.get("USE_CCACHE")),
)

bool_flag(
    name = "llvm_next_env",
    build_setting_default = is_env_true(env.get("LLVM_NEXT")),
)

bool_flag(
    name = "allow_unknown_warning_option_env",
    build_setting_default = is_env_true(env.get("ALLOW_UNKNOWN_WARNING_OPTION")),
)
